8.1/fa/3-zero.rst
حرکت از صفر به سمت محصول نهایی
======================================================

من پیشروی سریع را دوست دارم. می‌خواهم پروژه‌ی کوچک‌مان به سر‌یع‌ترین وجه ممکن حیات یابد. دوست دارم همین الان در محیط عمل‌آوری باشد. از آنجایی که هنوز چیزی توسعه نداده‌ایم، با استقرار یک صفحه‌ی «دردست احداث» زیبا و ساده کار را آغاز می‌کنیم. شما عاشقش خواهید شد!

برای پیدا‌کردن یک GIF ساده‌ی «در دست احداث» و در عین حال ایده‌آل، انیمیشنی و با سبکی قدیمی، کمی زمان صرف کنید. من تصمیم دارم از `این`_ استفاده کنم.

.. image:: images/under-construction.gif
    :align: center

به شما گفتم که قرار است کلی بهمان خوش بگذرد.

آماده‌کردن پروژه
--------------------------------

به کمک رابط خط فرمان ``symfony`` که قبلاً با هم نصب کردیم، یک پروژه‌ی سیمفونی جدید ایجاد نمایید:

.. code-block:: terminal

    $ symfony new guestbook --version=8.1 --php=8.5 --webapp --docker --upsun
    $ cd guestbook

این فرمان یک پوشش کوچک بر روی ``Composer`` است که ایجاد پروژه‌های سیمفونی را آسان می‌کند. این فرمان از `یک اسکلت پروژه‌`_ که شامل حداقل وابستگی‌هاست، استفاده می‌کند. این وابستگی‌ها در حقیقت کامپوننت‌های سیمفونی هستند که تقریباً برای هر پروژه‌ای الزامی‌اند: یک ابزار کنسولی و انتزاع‌ HTTP که برای ایجاد وب اپلیکیشن‌ها لازم است.

از آنجایی که در حال ایجاد یک وب اپلیکیشن کاملاً مجهز هستیم، چند گزینه افزوده‌ایم که زندگی ما را آسان‌تر می‌کنند:

* ``--webapp``: به‌صورت پیش‌فرض، اپلیکیشنی با کمترین وابستگی‌های ممکن ایجاد می‌شود. برای اکثر پروژه‌های وب، توصیه می‌شود که علاوه بر آن از بسته‌ی ``webapp`` استفاده کنید. این بسته بیشتر بسته‌های موردنیاز برای وب اپلیکیشن‌های «مدرن» را در بر می‌گیرد. بسته‌ی ``webapp`` تعداد زیادی بسته‌ی سیمفونی، از جمله Symfony Messenger و PostgreSQL از طریق Doctrine را اضافه می‌کند.

* ``--docker``: بر روی رایانه‌ی محلی شما، از Docker برای مدیریت سرویس‌هایی مانند PostgreSQL استفاده خواهیم کرد. این گزینه Docker را فعال می‌کند تا سیمفونی به‌صورت خودکار سرویس‌های Docker را بر اساس بسته‌های موردنیاز اضافه کند (برای نمونه، یک سرویس PostgreSQL هنگام افزودن ORM یا یک mail catcher هنگام افزودن Symfony Mailer).

* ``--upsun``: اگر می‌خواهید پروژه‌ی خود را بر روی Upsun مستقر کنید، این گزینه به‌صورت خودکار یک پیکربندی منطقی برای Upsun تولید می‌کند. Upsun ساده‌ترین و ترجیح‌داده‌شده‌ترین راه برای استقرار محیط‌های آزمایش، staging و عمل‌آوری سیمفونی در فضای ابری است.

اگر به مخزن مربوط به شالوده‌ی پروژه در GitHub نگاهی بیاندازید، متوجه می‌شوید که تقریباً خالی است. تنها یک فایل ``composer.json`` وجود دارد. با این حال پوشه‌ی ``guestbook`` پر از فایل است. چطور همچین چیزی امکان دارد؟ جواب این مسئله در بسته‌ی ``symfony/flex`` است. سیمفونی Flex یک افزونه‌ی Composer است که خود را به فرآیند نصب قلاب می‌کند و درصورتی که بسته‌ای دارای یک *recipe* باشد،‌ آن را اجرا می‌کند.

مدخل اصلی یک Recipe در سیمفونی، یک فایل manifest است که عملیات‌های لازم برای ثبت خودکار یک بسته در یک اپلیکیشن سیمفونی را شرح می‌دهد. برای نصب یک بسته در سیمفونی، هرگز نیازی به خواندن فایل README نخواهید داشت. اتوماسیون یکی از ویژگی‌های کلیدی سیمفونی است.

همچنین در صورتی که Git بر روی سیستم ما نصب باشد،‌ فرمان ``symfony new`` یک مخزن Git برای ما ایجاد کرده و اولین commit را به آن اضافه می‌کند.

نگاهی به ساختار پوشه‌ها بیاندازید:

.. code-block:: text
    :class: ignore

    ├── bin/
    ├── composer.json
    ├── composer.lock
    ├── config/
    ├── public/
    ├── src/
    ├── symfony.lock
    ├── var/
    └── vendor/

پوشه‌ی ``bin/``، حاوی مدخل اصلی CLI یعنی ``console`` است. شما همیشه از آن استفاده خواهید کرد.

پوشه‌ی ``config/`` از تعدادی فایل پیکربندی پیش‌فرض و مخسوس تشکیل شده است. برای هر بسته، یک فایل وجود دارد. احتمال اینکه بخواهید آن‌ها را تغییر دهید بسیار ضعیف است، اعتماد به تنظیمات پیش‌فرض همیشه ایده‌ی خوبی است.

پوشه‌ی ``public/``، پوشه‌ی root یا اصلی وبسایت است و اسکریپت ``index.php``، مدخل اصلی تمام منابع داینامیک HTTP است.

پوشه‌ی ``src/`` میزبان تمام کدهایی است که خواهید نوشت. این پوشه جایی است که بیشتر زمان خود را در آن می‌گذارنید. به‌صورت پیش‌فرض،‌ تمام کلاس‌های این پوشه از namespace ``App`` استفاده می‌کنند. این خانه و منبعِ بخش‌ منطقی برنامه‌ی شماست. سمفونی در اینجا حرفی کمی برای گفتن دارد.

پوشه‌ی ``var/`` شامل نهان‌سازی‌ها، لاگ‌ها و فایل‌های تولیدشده در طول اجرای اپلیکیشن است. می‌توانید از این پوشه صرف نظر کنید و به آن دست نزنید. این تنها پوشه‌ای است که در محیط پروداکشن، باید دسترسی write به آن ممکن باشد.

پوشه‌ی ``vendor/`` شامل تمام بسته‌هایی است که توسط Composer نصب گردیده‌اند (از جمله خود سیمفونی). این در حقیقت اسلحه‌ی مخفی ما برای افزایش بهره‌وری است. بیایید از ابداع دوباره‌ی چرخ، صرف نظر کنیم. شما برای انجام بخش‌های سخت کار، به کتابخانه‌های موجود تکیه خواهید کرد. این پوشه توسط Composer مدیریت می‌شود. هرگز به آن دست نزنید.

فعلا این تمام آن چیزی ست که لازم است بدانید.

ایجاد برخی منابع عمومی
-----------------------------------------

تمام محتویات پوشه‌ی ``public/``، برای مرورگر قابل دسترس است. برای نمونه اگر فایل گیف انیمیشنی‌مان ( ``under-construction.gif`` بنامیدش) را به پوشه‌ی جدید ``public/images/`` منتقل کنیم، آنگاه از طریق آدرس URL‌‌ی شبیه به ``https://localhost/images/under-construction.gif`` در دسترس خواهد بود.

تصویر gif من را از اینجا دانلود کنید.

.. code-block:: terminal

    $ mkdir public/images/
    $ php -r "copy('https://clipartmag.com/images/website-under-construction-image-6.gif', 'public/images/under-construction.gif');"

راه‌اندازی یک وب سرور محلی
-------------------------------------------------

.. index::
    single: Symfony CLI;server:start

رابط خط فرمان ``symfony``، یک وب سرور بهینه‌شده برای کار توسعه را به همراه دارد. مطمئناً از اینکه بگویم این وب سرور با سیمفونی بسیار خوب کار می‌کند، شگفت‌زده نمی‌شوید. البته هرگز نباید از آن در محیط پروداکشن استفاده کنید.

از داخل پوشه‌ی پروژه، وب سرور را در بک‌گراند (با پرچم ``-d``) استارت بزنید.

.. code-block:: terminal

    $ symfony server:start -d

سرور روی اولین درگاه (port) آزادی که با 8000 شروع شود آغاز به کار می‌کند. به عنوان یک میانبر، مرورگر را از طریق CLI باز کنید:

.. code-block:: terminal
    :class: ignore

    $ symfony open:local

مرورگر موردعلاقه‌ی شما یک تب جدید باز کرده و چیزی مشابه این را نمایش می‌دهد:

.. figure:: screenshots/symfony-greetings.png
    :alt: /
    :align: center
    :figclass: with-browser

.. tip::

    برای عیب‌یابی مشکلات، فرمان ``symfony server:log`` را اجرا کنید. این فرمان، لاگ‌های وب‌سرور، PHP و خود اپلیکیشن را نشان می‌دهد.

به آدرس ``/images/under-construction.gif`` بروید. آیا چنین چیزی می‌بینید؟

.. figure:: screenshots/under-construction-web.png
    :alt: /images/under-construction.gif
    :align: center
    :figclass: with-browser

.. index::
    single: Git;add
    single: Git;commit

راضی هستید؟ بیایید کارمان را commit کنیم:

.. code-block:: terminal
    :class: ignore

    $ git add public/images
    $ git commit -m'Add the under construction image'

آماده‌سازی برای عمل‌آوری
------------------------------------------------

.. index::
    single: Upsun;Initialization

نظرتان در مورد مستقرکردن کارمان در محیط عمل‌آوری چیست؟ می‌دانم که حتی یک صفحه‌ی HTML مناسب برای خوش‌آمدگویی به کاربرانمان هم نداریم. اما اینکه بتوانیم تصویر کوچک «دردست احداث» را بر روی یک سرور عمل‌آوری ببینیم، یک گام عالی رو به جلو خواهد بود. شما حتماً با این شعار آشنا هستید: *استقرار را زود و مکرر انجام بده*.

شما می‌توانید این اپلیکیشن را بر روی هر ارائه‌دهنده‌ی PHP میزبانی کنید ... که در حقیقت شامل تمام ارائه‌دهندگان خدمت میزبانی وب می‌شود. البته چند موضوع را در نظر بگیرید: ما به آخرین نسخه‌ی PHP و امکان میزبانی از خدماتی همچون پایگاه‌داده، صف و شماری دیگر از خدمات نیاز داریم.

من تصمیم خودم را گرفته‌ام، و آن `Upsun`_ است. Upsun، تمام چیزهایی که به آن احتیاج داریم را فراهم‌کرده و به تأمین‌سرمایه‌ی توسعه سیمفونی کمک می‌کند.

.. index::
    single: Symfony CLI;project:init

از آنجایی که هنگام ایجاد پروژه از گزینه‌ی ``--upsun`` استفاده کردیم، Upsun از پیش با تنها فایل پیکربندی‌ای که نیاز دارد، یعنی ``.upsun/config.yaml``، مقداردهی اولیه شده است.

پیش به سوی عمل‌آوری
------------------------------------

.. index::
    single: Symfony CLI;cloud:project:create
    single: Symfony CLI;cloud:push

زمان استقرار فرا رسیده است؟

یک پروژه‌ی ریموت جدید Upsun ایجاد کنید:

.. code-block:: terminal

    $ symfony cloud:project:create --title="Guestbook" --plan=development

این فرمان کارهای زیادی انجام می‌دهد:

* اولین‌بار که این فرمان را اجرا می‌کنید، اگر تا به حال احراز هویت نکرده‌اید، با اعتبارنامه‌های Upsun متعلق به خودتان، احراز هویت کنید.

* این فرمان یک پروژه‌ی جدید بر روی Upsun تدارک می‌بیند (در اولین پروژه‌ای که ایجاد می‌کنید، ۳۰ روز *به صورت رایگان* دریافت می‌کنید).

سپس مستقر کنید:

.. code-block:: terminal

    $ symfony cloud:push

کد با pushکردن آن به مخزن Git، مستقر می‌گردد. در پایان این فرمان، پروژه دارای یک دامنه مشخص خواهد بود که می‌توانید از آن برای دسترسی به پروژه استفاده کنید.

.. index::
    single: Symfony CLI;cloud:url

بررسی کنید که همه چیز به‌درستی کار می‌کند:

.. code-block:: terminal
    :class: ignore

    $ symfony cloud:url -1

شما باید خطای ۴۰۴ دریافت کنید، اما رفتن به آدرس ``/images/under-construction.gif``، باید کارمان را آشکار نماید.

دقت کنید که صفحه‌ی پیشفرض و زیبای سیمفونی را بر روی Upsun نخواهید داشت. چرا؟ شما به زودی یاد خواهید گرفت که سیمفونی از محیط‌های متفاوتی پشتیبانی می‌کند و Upsun به صورت خودکار کد را در محیط عمل‌آوری (که فاقد صفحه‌ی ذکرشده است) مستقر می‌کند.

.. index::
    single: Symfony CLI;cloud:project:delete

.. tip::

    اگر می‌خواهید پروژه را از روی Upsun حذف کنید، از فرمان ``cloud:project:delete`` استفاده کنید.

.. sidebar:: بیشتر بدانید

    * مخازن `recipeهای رسمی سیمفونی`_ و `recipeهای مهیا‌شده توسط جامعه‌ی سیمفونی`_، جایی که شما می‌توانید recipe‌های خودتان را ثبت کنید؛

    * `وب سرور محلی سیمفونی`_؛

    * `مستندات Upsun`_.

.. _`این`: https://clipartmag.com/images/website-under-construction-image-6.gif
.. _`یک اسکلت پروژه‌`: https://github.com/symfony/skeleton
.. _`Upsun`:     https://upsun.com/symfony/?utm_source=symfony-cloud-sign-up&utm_medium=backlink&utm_campaign=Symfony-Cloud-sign-up&utm_content=symfony-book
.. _`recipeهای رسمی سیمفونی`: https://github.com/symfony/recipes
.. _`recipeهای مهیا‌شده توسط جامعه‌ی سیمفونی`: https://github.com/symfony/recipes-contrib
.. _`وب سرور محلی سیمفونی`: https://symfony.com/doc/current/setup/symfony_server.html
.. _`مستندات Upsun`: https://developer.upsun.com/docs/get-started/stacks/symfony/index?utm_source=symfony-cloud-sign-up&utm_medium=backlink&utm_campaign=Symfony-Cloud-sign-up&utm_content=symfony-book
